[gd_scene load_steps=6 format=3 uid="uid://b5q8b0u4jmm2b"]

[ext_resource type="Texture2D" uid="uid://b8gq7ac6ilpak" path="res://Assets/UI/VentanaComercio.jpg" id="1_850gq"]
[ext_resource type="Script" uid="uid://de3jg50cg7tyi" path="res://MerchantPanel.gd" id="1_j83ap"]
[ext_resource type="PackedScene" uid="uid://b5jojh26118kn" path="res://InventoryContainer.tscn" id="2_cer8s"]
[ext_resource type="FontFile" uid="uid://b2p50emcdbfkt" path="res://Assets/Fonts/alegreya-sans/AlegreyaSans-Regular.ttf" id="4_co15t"]

[sub_resource type="FontVariation" id="FontVariation_nqjup"]
base_font = ExtResource("4_co15t")

[node name="MerchantPanel" type="TextureRect" node_paths=PackedStringArray("_merchantInventoryContainer", "_playerInventoryContainer", "_infoLabel", "_quantitySpinBox")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -231.0
offset_top = -243.0
offset_right = 231.0
offset_bottom = 243.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_850gq")
script = ExtResource("1_j83ap")
_merchantInventoryContainer = NodePath("ScrollContainer/MerchantInventory")
_playerInventoryContainer = NodePath("PlayerInventory")
_infoLabel = NodePath("Info")
_quantitySpinBox = NodePath("Quantity")
metadata/_edit_lock_ = true

[node name="BtnClose" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 412.0
offset_top = 27.0
offset_right = 431.0
offset_bottom = 47.0

[node name="Info" type="Label" parent="."]
layout_mode = 0
offset_left = 147.0
offset_top = 46.0
offset_right = 318.0
offset_bottom = 101.0
theme_override_fonts/font = SubResource("FontVariation_nqjup")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="PlayerInventory" parent="." instance=ExtResource("2_cer8s")]
custom_minimum_size = Vector2(160, 256)
layout_mode = 0
offset_left = 262.0
offset_top = 133.0
offset_right = 422.0
offset_bottom = 389.0
columns = 5

[node name="ScrollContainer" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(160, 256)
layout_mode = 0
offset_left = 37.0
offset_top = 133.0
offset_right = 203.0
offset_bottom = 389.0

[node name="MerchantInventory" parent="ScrollContainer" instance=ExtResource("2_cer8s")]
layout_mode = 2
columns = 5

[node name="Quantity" type="SpinBox" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = 174.0
offset_right = 41.0
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
min_value = 1.0
max_value = 10000.0
value = 1.0
update_on_text_changed = true

[node name="Buy" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 60.0
offset_top = 417.0
offset_right = 174.0
offset_bottom = 448.0

[node name="Sell" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 284.0
offset_top = 416.0
offset_right = 398.0
offset_bottom = 447.0

[connection signal="pressed" from="BtnClose" to="." method="_on_btn_close_pressed"]
[connection signal="pressed" from="Buy" to="." method="_OnBuyButtonPressed"]
[connection signal="pressed" from="Sell" to="." method="_OnSellButtonPressed"]
